# BIG-Statistics

./: .env  .gitignore  DOCUMENTATION_OVERVIEW.md  FRONTEND_ARCHITECTURE.md  GIT_WORKFLOW.md  POWERSHELL_START_GUIDE.md  PRODUCTION_DEPLOY_GUIDE.md  PROJECT_DESCRIPTION.md  QUICK_START.txt  README.md  SETUP_INSTRUCTIONS.md  START_SERVERS.md  TASK_MANAGER_SUMMARY.md  TASK_MANAGER_TECHNICAL_DOCS.md  TASK_MANAGER_USER_GUIDE.md  TECHNICAL_DOCUMENTATION.md  VENV_SETUP.md  alembic.ini  create_production_archive.ps1  install_server.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_project.sh  start_all.ps1  start_backend.ps1  start_frontend.ps1  start_production.ps1  test_feature.txt  update_system_statuses.sql
Back/: Check pip.py  Run_Server.py  config.py  pyrightconfig.json  requirements.txt
Back/BIG_STATISTICS/: DATABASE_SETUP.md  Run_Server.py  TROUBLESHOOTING_REPORT.md  __init__.py  check_sql_server.py  config.example  config.py  test_db_connection.py
Back/SQLscript/: Entry.xlsx  timeloss_entry_loader.py
Back/TaskManager/: README.md  SCHEMA_UPDATE_COMPLETE.md
Back/Users/: __init__.py
Back/WeChat/: README.md  WECHAT_INTEGRATION_DOCS.md  __init__.py  wechat_config.py
Back/database/: db_connector.py
Back/orders/: ORDER_STATISTICS_API.md
Back/routes/: uncompleted_orders_table.py  uncompleted_orders_views.py
DB_Docs/: 1C_Import_Logic.md  erd.md  functions.md  generate_docs.py  overview.md  procedures.md  tables.md  triggers.md  views.md
Front/: package-lock.json  package.json
Migration/: runner.py  scheduler.py  scripts_config.py
(+510 files in other folders)
